# Fusion

./: .gitignore  AGENT_AVAILABILITY_FIX.md  BTC_Agent_Dashboard_README.md  Dockerfile  Executive_Summary_Agentic_BTC_Support_Revolution.md  FUSION_LAUNCHER_USAGE.md  FUSION_V15_DELIVERY_SUMMARY.md  FUSION_V15_LAUNCHER_README.md  Fusion_v13.0_Launcher.sh  Fusion_v13_Installer.sh  Fusion_v14_Installer.command  Fusion_v14_Launcher.command  Fusion_v14_SDK_Installer.command  Fusion_v14_SDK_README.md  Fusion_v14_SDK_Sharing_Guide.md  Fusion_v14_SDK_Summary.md  Fusion_v15_Launcher.command  MASTER_PROMPT_RULES.md  MEGA_SPRINT_COMPLETE.md  README.md  Readiness_Assessment_Agentic_BTC_Revolution.md  agent_chains.json  agent_manifest.json  agents_combined.py  auto_sync.command  autocritique_loop.py  chatgpt_launcher.command  chatgpt_sync.command  copy_master_prompt.command  cursor_init.py  cursor_startup.py  design_system_components.html  execution_orchestrator_v14.py  fallback_trigger_config.json  finalize_package.py  fusion.py  fusion_api.py  fusion_bootstrap.py  fusion_guardrail_usage.py  fusion_launch.command  (+40 more)
ChatGPT_10_Files/: README_10_FILES.md  tools_combined.py
ChatGPT_Upload_v13.0/: Fusion_v13_Installer.command  README.txt  fusion_launcher.py  master_prompt.md  pattern_memory_loader.py  vp_design_agent.py  vp_design_patterns.py
ChatGPT_Upload_v14/: VERSION.txt  fusion.py  master_prompt.md
ChatGPT_Upload_v14.3/: README.md  agents_combined.py
ChatGPT_Upload_v14.5/: README.md  agent_choreographer.py  agent_manifest.json  debug_ui.py  fallback_trigger_config.json  fusion.py  master_prompt_7999.md  master_prompt_8000.md  master_prompt_main.md  pattern_tester.py  start_web_app.py  synthetic_reasoner_agent.py  test_web_app.py  voice_input.py
ChatGPT_Upload_v14/agents/: agent_registry.py  ai_interaction_designer_agent.py  component_librarian_agent.py  content_designer_agent.py  (+10 more)
Fusion_V13_Shipped/: Fusion_v13_Installer.command  README.md  chain_templates.py  fusion_launcher.py  master_prompt.md  prompt_patterns.py  version_audit.py
agents/: agent_registry.py  design_designintelligence.py  design_technologist.py  feedback_amplifier_agent.py  market_analyst_agent.py  pattern_refiner_agent.py  principal_designer_agent.py  product_navigator.py  reflection_agent.py  strategy_archivist_agent.py  strategy_pilot.py
analytics/: pattern_feedback_log.json
btc_agentic_command_center/: ADVOCATE_FOCUSED_DESIGNS_COMPLETE.md  ADVOCATE_JTBD_PROTOTYPE_DELIVERED.md  ARTIFACTS_SUMMARY.md  Advocate_Workflow_Revolution.md  BTC_AGENTIC_FLOWS_COMPREHENSIVE_CRITIQUE.md  BTC_Agentic_Design_Strategy.md  BTC_Agentic_Strategy_Executive_Summary.md  BossUI_G2_Interactive_Prototype_Summary.md  CASE_PAGE_REDESIGN_DELIVERED.md  CASE_TRIAGE_EXPERIENCE_DOCUMENTATION.md  COMPLETE_A_TO_Z_CHECKLIST.md  FINAL_COMPLETE_AZ_WORKFLOW.md  FUSION_CRITIQUE_REPORT.md  GOLD_STANDARD_PROTOTYPE_DELIVERED.md  IMPLEMENTATION_SUMMARY_9.7_QUALITY.md  OUTSTANDING_9.7_DELIVERED.md  PRODUCTION_READY_DELIVERED.md  REACT_COMPONENT_SYSTEM.md  README.md  ShadCN_Monochrome_3Way_Conversation_Implementation.md  btc_9.7_redesigned_prototype.html  btc_advocate_jtbd_prototype.html  btc_advocate_production_ready.html  btc_bossui_interactive_prototype.html  btc_case_page_redesigned.html  btc_case_triage_experience.html  btc_complete_a_to_z_workflow.html  btc_final_complete_workflow.html  btc_fixed_monochromatic_prototype.html  btc_gold_standard_prototype.html  btc_outstanding_9.7_prototype.html  btc_shadcn_monochrome_prototype.html
chains/: __init__.py
fusion_core/: __init__.py
master_prompt/: README.md  master_prompt.md  master_prompt_8000.md
memory/: agent_memory.json  agent_scorecard.json  pattern_registry.json
patterns/: pattern_library.py
scripts/: list_possible_duplicates.sh
tests/: test_creative_director.py
web/: requirements.txt
(+19 files in other folders)
